# Project_Sysmer_3A

./: .gitignore
Avancement_Notes_Consignes_A_Faire/: Lien_Latex_et_autres_doc.txt
DuckSimROS2/src/biped_descriptions/: CMakeLists.txt  package.xml
DuckSimROS2/src/biped_descriptions/config/: cassie.yaml  cassie_efforts.yaml  duck.yaml  robot_duck.rviz
DuckSimROS2/src/biped_descriptions/launch/: spawn_simplified_duck.launch.py  test_spawn_model.launch.py
DuckSimROS2/src/biped_descriptions/meshes/: femur - moteur-1.STL  femur - moteur_hanche-1.STL  tbi.stl  tibia.STL
DuckSimROS2/src/biped_descriptions/urdf/: robot_duck.urdf.xacro
DuckSimROS2/src/biped_descriptions/xacro/: biped_test.xacro  box.xacro  cassie.urdf  cassie.xacro  cassie_gazebo.xacro  cassie_real.xacro  cassie_real_simple.xacro  duck.xacro  robot_duck.urdf.xacro  robotduck.xacro
Projet_3A_CAO/: Canard_patte.SLDASM  arret_rotation.SLDPRT  canard_palme_1.SLDPRT  canard_palme_2.SLDPRT
Projet_3A_CAO/A_robot_conique/: Assemblage_leg_conique.SLDASM  Assemblage_leg_gauche_conique.SLDASM
Projet_3A_CAO/engrenage_coniques/: Bevel Gear_1.sldprt  Bevel Gear_1.step  Bevel Gear_2.sldprt  Bevel Gear_2.step  BevelGears 45 deg angle.step
Projet_3A_CAO/robot système parallele/: Assemblage_leg_parallele.SLDASM  SymétrieAssemblage_leg_parallele.SLDASM  SymétriePIGNON1.SLDPRT  SymétriePIGNON_moteur.SLDPRT  Symétriearret_rotation.SLDPRT  Symétriefemur_parallele.SLDPRT  (+18 more)
fich-from-data-scilab/: joints_xyz_average_in_VCp_ref_frame_fsb.xlsx  joints_xyz_average_in_VCp_ref_frame_q12.xlsx
py_code/: model.py  myleg.py
(+13 files in other folders)
