<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>biped_descriptions</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="youssef.learn.ab.25@gmail.com">youssefab</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>xacro</depend>
  <depend>gazebo</depend>
  <depend>gazebo_ros</depend>
  <depend>rclcpp</depend>
  <depend>gazebo_plugins</depend>
  <!--<depend>rviz2</depend>-->
  <depend>urdf</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>joint_trajectory_controller</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
